services/profile/deploy/canary/profile-service-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-canary
  labels:
    app: profile-service
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
      version: canary
  template:
    metadata:
      labels:
        app: profile-service
        version: canary
    spec:
      containers:
        - name: profile-service
          image: profile-service:latest
          ports:
            - containerPort: 50054
