services/profile/deploy/canary/profile-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  labels:
    app: profile-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: profile-service
      version: canary
  template:
    metadata:
      labels:
        app: profile-service
        version: canary
    spec:
      containers:
        - name: profile-service
          image: profile-service:latest
          ports:
            - containerPort: 50040
            - containerPort: 8040
            - containerPort: 8041
