services/profile/deploy/canary/profile-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  selector:
    app: profile-service
    version: canary
  ports:
    - name: grpc
      protocol: TCP
      port: 50080
      targetPort: 50080
    - name: http
      protocol: TCP
      port: 9020
      targetPort: 9020
