services/profile/deploy/canary/profile-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: profile-service
spec:
  hosts:
    - profile-service
  http:
    - route:
        - destination:
            host: profile-service
            subset: stable
          weight: 90
        - destination:
            host: profile-service
            subset: canary
          weight: 10
      port:
        number: 9020
